basic-parallel-filechunk/spring-commandline/src/test/resources/copybooks/bad/missing-level.cbl
SAMPLERECORD.
05  FIELD1 PIC X(10).
